bindings/rgml.h

/**
 * [Vector<T, 4>] backed by [f64]
 */
typedef struct Vector_f64__4 dvec4_t;
/**
 * [Vector<T, 3>] backed by [f64]
 */
typedef struct Vector_f64__3 dvec3_t;
/**
 *
 * A vector type. Commonly used for 2D and 3D math
 *
 * At an underlying level a [Vector] is an equivalent to using `[T; C]`
 *
 */
typedef struct Vector_f64__2 {
  /**
   * The underlying array of the vector, dereferencing [Vector] returns this
   */
  double backing[2];
} Vector_f64__2;
/**
 * [Vector<T, 2>] backed by [f64]
 */
typedef struct Vector_f64__2 Vector2F64;
/**
 * [Matrix<T, 4, 4>] backed by [f32]
 */
typedef struct Matrix_f32__4__4 mat4_t;
/**
 * [Vector<T, 4>] backed by [f32]
 */
typedef struct Vector_f32__4 vec4_t;
/**
 * [Vector<T, 3>] backed by [f32]
 */
typedef struct Vector_f32__3 vec3_t;
/**
 * [Vector<T, 2>] backed by [f32]
 */
typedef struct Vector_f32__2 Vector2F32;
Vector2F64 dvec2_abs(Vector2F64 i);
Vector2F64 dvec2_add(Vector2F64 lhs, Vector2F64 rhs);
Vector2F64 dvec2_ceil(Vector2F64 i);
Vector2F64 dvec2_cos(Vector2F64 i);
Vector2F64 dvec2_default(void);
Vector2F64 dvec2_div(Vector2F64 lhs, Vector2F64 rhs);
double dvec2_dot(Vector2F64 lhs, Vector2F64 rhs);
Vector2F64 dvec2_floor(Vector2F64 i);
Vector2F64 dvec2_fract(Vector2F64 i);
Vector2F64 dvec2_from_vec3(dvec3_t i);
Vector2F64 dvec2_from_vec4(dvec4_t i);
Vector2F64 dvec2_lerp(Vector2F64 from, Vector2F64 to, double alpha);
double dvec2_magnitude(Vector2F64 i);
double dvec2_magnitude_sqr(Vector2F64 i);
Vector2F64 dvec2_max(Vector2F64 lhs, Vector2F64 rhs);
Vector2F64 dvec2_min(Vector2F64 lhs, Vector2F64 rhs);
Vector2F64 dvec2_mul(Vector2F64 lhs, Vector2F64 rhs);
Vector2F64 dvec2_new(double x, double y);
Vector2F64 dvec2_normalize(Vector2F64 i);
Vector2F64 dvec2_pow(Vector2F64 lhs, Vector2F64 rhs);
Vector2F64 dvec2_round(Vector2F64 i);
Vector2F64 dvec2_saturate(Vector2F64 i);
Vector2F64 dvec2_scalar(double x);
Vector2F64 dvec2_sign(Vector2F64 i);
Vector2F64 dvec2_sin(Vector2F64 i);
Vector2F64 dvec2_sqrt(Vector2F64 i);
Vector2F64 dvec2_sub(Vector2F64 lhs, Vector2F64 rhs);
double dvec2_sum(Vector2F64 i);
Vector2F64 dvec2_tan(Vector2F64 i);
dvec3_t dvec3_abs(dvec3_t i);
dvec3_t dvec3_add(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_ceil(dvec3_t i);
dvec3_t dvec3_cos(dvec3_t i);
dvec3_t dvec3_cross(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_default(void);
dvec3_t dvec3_div(dvec3_t lhs, dvec3_t rhs);
double dvec3_dot(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_floor(dvec3_t i);
dvec3_t dvec3_fract(dvec3_t i);
dvec3_t dvec3_from_vec2(Vector2F64 i);
dvec3_t dvec3_from_vec4(dvec4_t i);
dvec3_t dvec3_lerp(dvec3_t from, dvec3_t to, double alpha);
double dvec3_magnitude(dvec3_t i);
double dvec3_magnitude_sqr(dvec3_t i);
dvec3_t dvec3_max(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_min(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_mul(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_new(double x, double y, double z);
dvec3_t dvec3_normalize(dvec3_t i);
dvec3_t dvec3_pow(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_reflect(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_round(dvec3_t i);
dvec3_t dvec3_saturate(dvec3_t i);
dvec3_t dvec3_scalar(double x);
dvec3_t dvec3_sign(dvec3_t i);
dvec3_t dvec3_sin(dvec3_t i);
dvec3_t dvec3_sqrt(dvec3_t i);
dvec3_t dvec3_sub(dvec3_t lhs, dvec3_t rhs);
double dvec3_sum(dvec3_t i);
dvec3_t dvec3_tan(dvec3_t i);
vec4_t vec4_abs(vec4_t i);
vec4_t vec4_add(vec4_t lhs, vec4_t rhs);
vec4_t vec4_ceil(vec4_t i);
vec4_t vec4_cos(vec4_t i);
vec4_t vec4_default(void);
vec4_t vec4_div(vec4_t lhs, vec4_t rhs);
float vec4_dot(vec4_t lhs, vec4_t rhs);
vec4_t vec4_floor(vec4_t i);
vec4_t vec4_fract(vec4_t i);
vec4_t vec4_from_vec2(Vector2F32 i);
vec4_t vec4_from_vec3(vec3_t i);
vec4_t vec4_identity(void);
vec4_t vec4_lerp(vec4_t from, vec4_t to, float alpha);
float vec4_magnitude(vec4_t i);
float vec4_magnitude_sqr(vec4_t i);
vec4_t vec4_max(vec4_t lhs, vec4_t rhs);
vec4_t vec4_min(vec4_t lhs, vec4_t rhs);
vec4_t vec4_mul(vec4_t lhs, vec4_t rhs);
vec4_t vec4_mul_mat4(vec4_t lhs, mat4_t rhs);
vec4_t vec4_new(float x, float y, float z, float w);
vec4_t vec4_normalize(vec4_t i);
vec4_t vec4_pow(vec4_t lhs, vec4_t rhs);
vec4_t vec4_round(vec4_t i);
vec4_t vec4_saturate(vec4_t i);
vec4_t vec4_scalar(float x);
vec4_t vec4_sign(vec4_t i);
vec4_t vec4_sin(vec4_t i);
vec4_t vec4_sqrt(vec4_t i);
vec4_t vec4_sub(vec4_t lhs, vec4_t rhs);
float vec4_sum(vec4_t i);
vec4_t vec4_tan(vec4_t i);