bindings/dotnet/Internal.cs


		[DllImport("prism_math")]
		internal static extern Vector4 vec4_identity();

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_new(float x, float y, float z, float w);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_scalar(float x);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_default();

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_from_vec2(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_from_vec3(Vector3 i);

		// Skeleton Bindings (these are placeholders, they may need to be manually fixed)
		/*
		public Vector4 Add(Vector4 rhs) => Vector4F32.vec4_add(this, rhs);
		public Vector4 Sub(Vector4 rhs) => Vector4F32.vec4_sub(this, rhs);
		public Vector4 Mul(Vector4 rhs) => Vector4F32.vec4_mul(this, rhs);
		public Vector4 Div(Vector4 rhs) => Vector4F32.vec4_div(this, rhs);
		public Vector4 Mul_mat4(Matrix4x4 rhs) => Vector4F32.vec4_mul_mat4(this, rhs);
		public Vector4 Normalize() => Vector4F32.vec4_normalize(this);
		public Vector4 Abs() => Vector4F32.vec4_abs(this);
		public Vector4 Floor() => Vector4F32.vec4_floor(this);
		public Vector4 Ceil() => Vector4F32.vec4_ceil(this);
		public Vector4 Round() => Vector4F32.vec4_round(this);
		public Vector4 Saturate() => Vector4F32.vec4_saturate(this);
		public Vector4 Sqrt() => Vector4F32.vec4_sqrt(this);
		public Vector4 Sin() => Vector4F32.vec4_sin(this);
		public Vector4 Cos() => Vector4F32.vec4_cos(this);
		public Vector4 Tan() => Vector4F32.vec4_tan(this);
		public Vector4 Sign() => Vector4F32.vec4_sign(this);
		public Vector4 Fract() => Vector4F32.vec4_fract(this);
		public float Sum() => Vector4F32.vec4_sum(this);
		public float Magnitude() => Vector4F32.vec4_magnitude(this);
		public float Magnitude_sqr() => Vector4F32.vec4_magnitude_sqr(this);
		public Vector4 Min(Vector4 rhs) => Vector4F32.vec4_min(this, rhs);
		public Vector4 Max(Vector4 rhs) => Vector4F32.vec4_max(this, rhs);
		public Vector4 Pow(Vector4 rhs) => Vector4F32.vec4_pow(this, rhs);
		public float Dot(Vector4 rhs) => Vector4F32.vec4_dot(this, rhs);
		public Vector4 Lerp(Vector4 to, float alpha) => Vector4F32.vec4_lerp(this, to, alpha);
		public Vector4 Identity() => Vector4F32.vec4_identity();
		public Vector4 New(float x, float y, float z, float w) => Vector4F32.vec4_new(x, y, z, w);
		public Vector4 Scalar(float x) => Vector4F32.vec4_scalar(x);
		public Vector4 Default() => Vector4F32.vec4_default();
		public Vector4 From_vec2(Vector2 i) => Vector4F32.vec4_from_vec2(i);
		public Vector4 From_vec3(Vector3 i) => Vector4F32.vec4_from_vec3(i);
		*/
	}
	internal class Vector2F64 {
		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_add(DVector2 lhs, DVector2 rhs);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_sub(DVector2 lhs, DVector2 rhs);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_mul(DVector2 lhs, DVector2 rhs);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_div(DVector2 lhs, DVector2 rhs);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_normalize(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_abs(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_floor(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_ceil(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_round(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_saturate(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_sqrt(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_sin(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_cos(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_tan(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_sign(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_fract(DVector2 i);

		[DllImport("prism_math")]
		internal static extern double dvec2_sum(DVector2 i);

		[DllImport("prism_math")]
		internal static extern double dvec2_magnitude(DVector2 i);

		[DllImport("prism_math")]
		internal static extern double dvec2_magnitude_sqr(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_min(DVector2 lhs, DVector2 rhs);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_max(DVector2 lhs, DVector2 rhs);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_pow(DVector2 lhs, DVector2 rhs);

		[DllImport("prism_math")]
		internal static extern double dvec2_dot(DVector2 lhs, DVector2 rhs);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_lerp(DVector2 from, DVector2 to, double alpha);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_new(double x, double y);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_scalar(double x);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_default();

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_from_vec3(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector2 dvec2_from_vec4(DVector4 i);

		// Skeleton Bindings (these are placeholders, they may need to be manually fixed)
		/*
		public DVector2 Add(DVector2 rhs) => Vector2F64.dvec2_add(this, rhs);
		public DVector2 Sub(DVector2 rhs) => Vector2F64.dvec2_sub(this, rhs);
		public DVector2 Mul(DVector2 rhs) => Vector2F64.dvec2_mul(this, rhs);
		public DVector2 Div(DVector2 rhs) => Vector2F64.dvec2_div(this, rhs);
		public DVector2 Normalize() => Vector2F64.dvec2_normalize(this);
		public DVector2 Abs() => Vector2F64.dvec2_abs(this);
		public DVector2 Floor() => Vector2F64.dvec2_floor(this);
		public DVector2 Ceil() => Vector2F64.dvec2_ceil(this);
		public DVector2 Round() => Vector2F64.dvec2_round(this);
		public DVector2 Saturate() => Vector2F64.dvec2_saturate(this);
		public DVector2 Sqrt() => Vector2F64.dvec2_sqrt(this);
		public DVector2 Sin() => Vector2F64.dvec2_sin(this);
		public DVector2 Cos() => Vector2F64.dvec2_cos(this);
		public DVector2 Tan() => Vector2F64.dvec2_tan(this);
		public DVector2 Sign() => Vector2F64.dvec2_sign(this);
		public DVector2 Fract() => Vector2F64.dvec2_fract(this);
		public double Sum() => Vector2F64.dvec2_sum(this);
		public double Magnitude() => Vector2F64.dvec2_magnitude(this);
		public double Magnitude_sqr() => Vector2F64.dvec2_magnitude_sqr(this);
		public DVector2 Min(DVector2 rhs) => Vector2F64.dvec2_min(this, rhs);
		public DVector2 Max(DVector2 rhs) => Vector2F64.dvec2_max(this, rhs);
		public DVector2 Pow(DVector2 rhs) => Vector2F64.dvec2_pow(this, rhs);
		public double Dot(DVector2 rhs) => Vector2F64.dvec2_dot(this, rhs);
		public DVector2 Lerp(DVector2 to, double alpha) => Vector2F64.dvec2_lerp(this, to, alpha);
		public DVector2 New(double x, double y) => Vector2F64.dvec2_new(x, y);
		public DVector2 Scalar(double x) => Vector2F64.dvec2_scalar(x);
		public DVector2 Default() => Vector2F64.dvec2_default();
		public DVector2 From_vec3(DVector3 i) => Vector2F64.dvec2_from_vec3(i);
		public DVector2 From_vec4(DVector4 i) => Vector2F64.dvec2_from_vec4(i);
		*/
	}
	internal class Vector3F64 {
		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_add(DVector3 lhs, DVector3 rhs);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_sub(DVector3 lhs, DVector3 rhs);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_mul(DVector3 lhs, DVector3 rhs);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_div(DVector3 lhs, DVector3 rhs);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_normalize(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_abs(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_floor(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_ceil(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_round(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_saturate(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_sqrt(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_sin(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_cos(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_tan(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_sign(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_fract(DVector3 i);

		[DllImport("prism_math")]
		internal static extern double dvec3_sum(DVector3 i);

		[DllImport("prism_math")]
		internal static extern double dvec3_magnitude(DVector3 i);

		[DllImport("prism_math")]
		internal static extern double dvec3_magnitude_sqr(DVector3 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_min(DVector3 lhs, DVector3 rhs);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_max(DVector3 lhs, DVector3 rhs);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_pow(DVector3 lhs, DVector3 rhs);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_cross(DVector3 lhs, DVector3 rhs);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_reflect(DVector3 lhs, DVector3 rhs);

		[DllImport("prism_math")]
		internal static extern double dvec3_dot(DVector3 lhs, DVector3 rhs);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_lerp(DVector3 from, DVector3 to, double alpha);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_new(double x, double y, double z);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_scalar(double x);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_default();

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_from_vec2(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector3 dvec3_from_vec4(DVector4 i);
